--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -1,37 +1,21 @@
-footer {
-  background-color: #333;
-  color: #fff;
+.footer {
+  color: #ffffff;
   padding: 20px 0;
-  text-align: center;
+  background-color: #e4e4e4; /* Fond similaire au header */
+  margin-top: 1em;
 }
 
-.footer-content {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
-}
-
-.footer-content p {
-  margin: 0;
-}
-
-.footer-links {
-  list-style: none;
-  margin: 10px 0 0;
-  padding: 0;
+.container {
   display: flex;
   justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: 95%;
+  margin: 0 auto;
 }
 
-.footer-links li {
-  margin: 0 15px;
-}
-
-.footer-links a {
-  color: #fff;
+.footer-text {
+  font-size: 1rem;
+  color: #000000; /* Texte noir pour contraster avec le fond gris clair */
   text-decoration: none;
-}
-
-.footer-links a:hover {
-  text-decoration: underline;
 }
