--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -1,7 +1,7 @@
 .footer {
   color: #ffffff;
   padding: 20px 0;
-  background-color: #e4e4e4; /* Fond similaire au header */
+  background-color: #e4e4e4;
   margin-top: 1em;
 }
 
@@ -16,6 +16,6 @@
 
 .footer-text {
   font-size: 1rem;
-  color: #000000; /* Texte noir pour contraster avec le fond gris clair */
+  color: #000000;
   text-decoration: none;
 }
