ajout table management features

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-header />
-<main>
-  <router-outlet></router-outlet>
+<main class="main-container">
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
 </main>
 <app-footer />
