--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-*{
-    margin: 0;
-    padding: 0;
+@import url('https://fonts.googleapis.com/css2?family=Chocolate+Classical+Sans&family=Inclusive+Sans:ital,wght@0,300..700;1,300..700&family=Zen+Dots&display=swap');
+
+body {
+  margin: 0;
 }
