changement header -> side bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
-<app-header />
+<app-side-bar />
 <main class="main-container">
-  <div class="container">
     <router-outlet></router-outlet>
-  </div>
 </main>
 <app-footer />
