--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,15 +4,15 @@
   min-height: 100vh;
 }
 
+
 .main-container {
+  margin-left: 16em;
   flex: 1;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  padding: 1em;
 }
 
-.container{
-  width: 90%;
-  margin-top: 1em;
-  margin-bottom: 1em;
-}
+
+
+
+
