--- a/src/app/features/tables/components/table-card/table-card.component.html
+++ b/src/app/features/tables/components/table-card/table-card.component.html
@@ -1,5 +1,5 @@
 <div class="bg-white shadow-lg rounded-xl p-4 border border-gray-200">
-  <h3 class="text-lg font-semibold text-gray-800 border-b pb-2">
+  <h3 class="text-lg font-semibold text-gray-800 border-b">
     {{ table.name }}
   </h3>
   <ul class="mt-2">
