--- a/src/app/features/tables/components/table-card/table-card.component.html
+++ b/src/app/features/tables/components/table-card/table-card.component.html
@@ -1,12 +1,7 @@
-<div class="bg-white shadow-lg rounded-xl p-4 border border-gray-200">
-  <h3 class="text-lg font-semibold text-gray-800 border-b">
+<div
+  class="bg-white shadow-lg rounded-xl p-4 border border-gray-200 flex items-center justify-center w-[250px] mx-auto text-center hover:shadow-xl hover:border-gray-300 transition-all duration-300"
+>
+  <h3 class="text-xl font-bold text-gray-900">
     {{ table.name }}
   </h3>
-  <ul class="mt-2">
-    @for (colum of table.columns; track $index) {
-    <li class="text-gray-600 py-1 border-b last:border-none">
-      {{ colum }}
-    </li>
-    }
-  </ul>
 </div>
