--- a/src/app/features/tables/pages/table-list-page/table-list-page.component.html
+++ b/src/app/features/tables/pages/table-list-page/table-list-page.component.html
@@ -1,5 +1,3 @@
-<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-  @for (table of tables; track $index) {
-  <app-table-card [table]="table"></app-table-card>
-  }
-</div>
+<header>
+  <app-table-nav-bar></app-table-nav-bar>
+</header>
