Ajout de la page Dashboard et mise à jour des routes, amélioration de la navigation des tables

--- a/src/app/features/tables/components/table-card/table-card.component.html
+++ b/src/app/features/tables/components/table-card/table-card.component.html
@@ -1,7 +1,7 @@
 <div
-  class="bg-white shadow-lg rounded-xl p-4 border border-gray-200 flex items-center justify-center w-[250px] mx-auto text-center hover:shadow-xl hover:border-gray-300 transition-all duration-300"
+  class="bg-white shadow-md rounded-lg p-2 border border-gray-200 inline-flex items-center justify-center w-[150px] text-center hover:shadow-lg hover:border-gray-300 transition-all duration-300"
 >
-  <h3 class="text-xl font-bold text-gray-900">
+  <h3 class="text-lg font-semibold text-gray-900">
     {{ table.name }}
   </h3>
 </div>
