--- a/src/app/features/tables/components/table-nav-bar/table-nav-bar.component.html
+++ b/src/app/features/tables/components/table-nav-bar/table-nav-bar.component.html
@@ -11,7 +11,7 @@
   </button>
 
   @for (table of currentTables; track $index) {
-    <app-table-card [name]="table.name" class="mx-2"></app-table-card>
+    <app-table-card [name]="table.name" class="mx-2 cursor-pointer" (click)="onTableClick(table)"/>
   }
 
   <button
