--- a/src/app/layout/side-bar/side-bar.component.html
+++ b/src/app/layout/side-bar/side-bar.component.html
@@ -1,5 +1,5 @@
 <aside class="sidebar fixed left-0 top-0 h-full w-64 p-6">
-  <a href="/" class="text-black text-2xl font-bold tracking-wide hover:text-gray-800 transition-transform duration-300 hover:scale-105">
+  <a [routerLink]="'/'" class="text-black text-2xl font-bold tracking-wide hover:text-gray-800 transition-transform duration-300 hover:scale-105">
     {{ title }}
   </a>
   <ul class="mt-6 flex flex-col space-y-4 w-full">
