--- a/src/app/features/tables/components/table-card-data/table-card-data.component.html
+++ b/src/app/features/tables/components/table-card-data/table-card-data.component.html
@@ -1,1 +1,21 @@
-<p>table-card-data works!</p>
+@if (tablesData && tablesData.length > 0) {
+<div>
+  <table class="table">
+    <thead>
+      <tr>
+        @for (column of [tablesData[0]] ; track $index)
+        {
+          <th>{{ column }}</th>
+        }
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+       @for (row of tablesData; track $index) {
+        <td >{{ row }}</td>
+      }
+      </tr>
+    </tbody>
+  </table>
+</div>
+}
