--- a/src/app/features/tables/components/table-card-name/table-card-name.component.html
+++ b/src/app/features/tables/components/table-card-name/table-card-name.component.html
@@ -1,7 +1,7 @@
 <div
-  class="bg-white shadow-md rounded-lg p-2 border border-gray-200 inline-flex items-center justify-center w-[150px] text-center hover:shadow-lg hover:border-gray-300 transition-all duration-300"
+  class="bg-white shadow-md rounded-lg p-2 border border-gray-200 inline-flex items-center justify-center w-[150px] sm:w-[120px] text-center hover:shadow-lg hover:border-gray-300 transition-all duration-300"
 >
-  <h3 class="text-lg font-semibold text-gray-900">
+  <h3 class="text-lg sm:text-base font-semibold text-gray-900">
     {{ name }}
   </h3>
 </div>
