--- a/src/app/features/tables/components/table-card-data/table-card-data.component.html
+++ b/src/app/features/tables/components/table-card-data/table-card-data.component.html
@@ -1,11 +1,18 @@
 @if (tablesData) {
-  <div>
+  <div class="p-2">
     @for (item of tablesData; track $index) {
-      <div>
+      <div class="bg-gray-100 rounded-md p-2 mb-2">
         @for (key of getObjectKeys(item); track $index) {
-          <p>{{ key }}: {{ getValue(key, item) }}</p>
+          <div class="flex justify-between text-sm border-b last:border-none py-1">
+            <span class="font-medium">{{ key }}</span>
+            <span>{{ getValue(key, item) }}</span>
+          </div>
         }
       </div>
     }
   </div>
+}@else {
+  <p>
+    Aucune donnée...
+  </p>
 }
