--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,11 +3,11 @@
   flex-direction: column;
   min-height: 100vh;
 }
-
-
 .main-container {
   border: 1px solid #ff0000;
-  margin-left: 16em;
-  flex: 1;
+  margin-left: 16em; // Pour laisser de l'espace à la sidebar
+  flex: 1; // Occupe tout l'espace disponible
   padding: 1em;
+  display: flex;
+  flex-direction: column;
 }
