--- a/src/app/features/tables/pages/table-list-page/table-list-page.component.scss
+++ b/src/app/features/tables/pages/table-list-page/table-list-page.component.scss
@@ -1,3 +1,15 @@
-.card-info{
+.page-container {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.card-info {
+  display: flex;
   border: 1px solid #ff0000;
+  flex: 1;
+  padding: 1em;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
 }
