Refractor service et data component

--- a/src/app/features/tables/components/table-card-data/table-card-data.component.html
+++ b/src/app/features/tables/components/table-card-data/table-card-data.component.html
@@ -1,8 +1,8 @@
 @if (filteredData) {
   <div>
-    @for (filterKey of availableFilters; track filterKey) {
-      <button (click)="onFilterSelect(filterKey)">
-        {{ filterKey }}
+    @for (filter of availableFilters; track filter.key) {
+      <button (click)="onFilterSelect(filter.key)">
+        {{ filter.name }}
       </button>
     }
   </div>
