--- a/src/app/features/tables/components/table-card-info/table-card-info.component.html
+++ b/src/app/features/tables/components/table-card-info/table-card-info.component.html
@@ -18,7 +18,7 @@
   <div
     class="flex-1 bg-white shadow-lg rounded-xl p-6 h-[400px] overflow-auto transition-transform transform"
   >
-    <app-table-card-data [tableName]="table.name" />
+    <app-table-card-data (sendTablesData)="emitTablesData($event)" [tableName]="table.name" />
   </div>
 </div>
 
