--- a/src/app/features/tables/components/export-data/export-data.component.html
+++ b/src/app/features/tables/components/export-data/export-data.component.html
@@ -1,1 +1,16 @@
-<button (click)="exportCsv()">Exporter au format CSV</button>
+<h3 class="text-3xl font-bold text-gray-800 mt-4">Export des données</h3>
+
+<button 
+  (click)="exportCsv()" 
+  class="bg-green-200 text-gray-800 font-medium py-2 px-4 rounded-lg shadow-md hover:bg-green-300 transition-all mt-6"
+>
+  Exporter au format CSV
+</button>
+
+@if (showErrorMessage) {
+    <p>Il n'y a aucune donnée à exporter</p>
+}
+
+<!-- @if (bookForm.get('author')?.invalid && bookForm.get('author')?.touched) {
+    <p>Le nom de l'auteur doit posséder entre 5 et 50 caractères</p>
+} -->
