Commit Importation données avec Fichier CSV

--- a/src/app/features/tables/pages/table-list-page/table-list-page.component.html
+++ b/src/app/features/tables/pages/table-list-page/table-list-page.component.html
@@ -6,4 +6,5 @@
   </div>
 
   <app-export-data [tablesData]="tablesData" [tableName]="selectedTable"></app-export-data>
+  <app-import-data></app-import-data>
 </div>
