--- a/src/app/features/tables/pages/table-list-page/table-list-page.component.html
+++ b/src/app/features/tables/pages/table-list-page/table-list-page.component.html
@@ -6,5 +6,5 @@
   </div>
 
   <app-export-data [tablesData]="tablesData" [tableName]="selectedTable"></app-export-data>
-  <app-import-data></app-import-data>
+  <app-import-data [tableName]="selectedTable"></app-import-data>
 </div>
