--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -1,20 +1,16 @@
 .footer {
-  color: #ffffff;
-  padding: 20px 0;
-  background-color: #e4e4e4;
-}
-
-.container {
+  background: linear-gradient(to right, #f8f9fa, #e4e4e4);
+  height: 4rem;
+  box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+  border-top: 2px solid #ddd;
   display: flex;
-  justify-content: center;
   align-items: center;
-  width: 100%;
-  max-width: 95%;
-  margin: 0 auto;
+  justify-content: center;
 }
 
 .footer-text {
-  font-size: 1rem;
-  color: #000000;
-  text-decoration: none;
+  color: #333;
+  font-size: 1.1rem;
+  font-weight: 500;
+  border-radius: 6px;
 }
