--- a/src/app/features/tables/components/table-header/table-header.component.html
+++ b/src/app/features/tables/components/table-header/table-header.component.html
@@ -1,11 +1,16 @@
-<div class="grid grid-cols-[repeat(auto-fit,minmax(100px,1fr))] gap-2 text-sm font-medium border-b py-1">
+<div
+  class="grid grid-cols-[repeat(auto-fit,minmax(100px,1fr))] gap-2 text-sm font-medium border-b py-1"
+>
   @for (column of columns; track $index) {
-  <span class="cursor-pointer hover:text-blue-500" (click)="onSort(column)">
+  <span
+    class="cursor-pointer hover:text-blue-500 flex items-center gap-1"
+    (click)="onSort(column)"
+  >
     {{ column }}
-    @for (sortKey of sortKeys; track $index) {
-      @if (sortKey.key === column) {
-        <span>{{ sortKey.direction === "asc" ? "▲" : "▼" }}</span>
-      }
+    @if (getSortDirection(column)) {
+    <span class="text-blue-500 text-xs flex items-center">
+      {{ getSortDirection(column) === "asc" ? "▲" : "▼" }}
+    </span>
     }
   </span>
   }
