--- a/src/app/features/analysis/pages/analysis-card/analysis-card.component.scss
+++ b/src/app/features/analysis/pages/analysis-card/analysis-card.component.scss
@@ -1,6 +1,88 @@
-.stats-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  gap: 2rem;
+.carousel-container {
+  max-width: 90%;
+  margin: 2rem auto;
+  overflow: hidden;
+  border: 1px solid #ff0000;
+}
+
+.carousel-slides {
+  position: relative;
+  height: 500px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.carousel-slide {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: #f4f4f4;
+  border-radius: 8px;
+  padding: 1.5rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: opacity 0.5s ease-in-out;
+  opacity: 0;
+
+  &.hidden {
+    display: none;
+  }
+
+  &:not(.hidden) {
+    opacity: 1;
+    z-index: 1;
+  }
+}
+
+.carousel-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
   padding: 1rem;
+  cursor: pointer;
+  border-radius: 50%;
+  font-size: 1.5rem;
+  z-index: 10;
+
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+}
+
+.prev {
+  left: 2rem;
+}
+
+.next {
+  right: 2rem;
+}
+
+.carousel-dots {
+  display: flex;
+  justify-content: center;
+  padding: 1rem 0;
+  z-index: 10;
+  position: relative;
+
+  span {
+    width: 12px;
+    height: 12px;
+    margin: 0 5px;
+    background-color: #bbb;
+    border-radius: 50%;
+    cursor: pointer;
+
+    &.active {
+      background-color: #333;
+    }
+
+    &:hover {
+      background-color: #777;
+    }
+  }
 }
