--- a/src/app/features/analysis/pages/analysis-card/analysis-card.component.html
+++ b/src/app/features/analysis/pages/analysis-card/analysis-card.component.html
@@ -1,6 +1,6 @@
 <div class="dashboard-container">
   <div class="dashboard-header">
-    <h1>Data Analytics Dashboard</h1>
+    <h1>Data Analytics</h1>
     <div class="etl-control">
       <button class="etl-button"
               (click)="runETLProcess()"
@@ -44,7 +44,7 @@
 
     <div class="card uniform-card">
       <div class="chart-container">
-        <app-user-engagement-chart [userEngagement]="userEngagement" />
+        <app-user-engagement-chart [userEngagement]="userEngagement ?? null" />
       </div>
     </div>
 
