--- a/src/app/features/tables/components/import-data/import-data.component.html
+++ b/src/app/features/tables/components/import-data/import-data.component.html
@@ -1,5 +1,7 @@
 <hr class="border-t border-gray-300 w-full mb-4 mt-4">
 <h3 class="text-3xl font-bold text-gray-800 mt-4">Importer des données</h3>
+<p class="mt-2">⚠️ Attention : L'ordre des colonnes dans le fichier CSV doit être dans l'ordre alphabétique des attributs</p>
+<p>⚠️ Les dates doivent être sous la forme "YYYY-MM-DD" (exemple : 2025-12-17)</p>
 <form [formGroup]="dataForm" (ngSubmit)="onSubmit()" class="flex flex-col items-start gap-4 bg-white p-4 rounded-lg shadow-md mt-4">
     <label for="fichierImport" class="text-gray-700 font-medium">Fichier d'import (format CSV) :</label>
     <input type="file" accept=".csv" id="fichierImport" formControlName="fichierImport" (change)="onFileSelected($event)" class="border border-gray-300 rounded-md p-2 text-gray-700 cursor-pointer"/>
