--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,7 +13,10 @@
 }
 
 .main-container {
-  border: 1px solid #ff0000;
+  display: flex;
+  background-color: #dadada;
+  border-radius: 0.5em;
+  justify-content: center;
   margin: 1em;
   flex: 1;
   padding: 1em;
