--- a/src/app/features/tables/components/table-card-data/table-card-data.component.html
+++ b/src/app/features/tables/components/table-card-data/table-card-data.component.html
@@ -1,7 +1,7 @@
-<div class="relative p-2">
+<div class="relative p-2 min-h-[500px]">
 
   @if (isAddingMode) {
-    <div class="bg-gray-100 rounded-md p-4 mb-4 shadow-md">
+    <div class="bg-gray-200 rounded-md p-4 mb-4 shadow-md">
       <h3 class="text-lg font-medium mb-3">Nouvel élément</h3>
 
       @if (errorMessage) {
@@ -76,10 +76,10 @@
     <span>+</span> Ajouter un élément
   </button>
 
-  <div class="relative p-2">
+  <div class="relative p-2 ">
     <button
       (click)="toggleFilters()"
-      class="bg-gray-100 text-gray-700 px-3 py-1 rounded-md text-sm hover:bg-gray-200 transition-colors"
+      class="bg-gray-200 text-gray-700 px-3 py-1 rounded-md text-sm hover:bg-gray-200 transition-colors"
     >
       Filtres
     </button>
@@ -96,7 +96,7 @@
 
   <div class="p-2">
     @if (filteredData) { @if (filteredData.length > 0) {
-    <div class="bg-gray-100 rounded-md p-2 mb-2">
+    <div class="bg-gray-200 rounded-md p-2 mb-2">
       <app-table-header
         [columns]="getObjectKeys(filteredData[0])"
         [sortKeys]="sortKeys"
@@ -117,11 +117,11 @@
       }
     </div>
     } @else {
-    <div class="bg-gray-100 rounded-md p-2 mb-2 text-center text-gray-500">
+    <div class="bg-gray-200 rounded-md p-2 mb-2 text-center text-gray-500">
       Aucun résultat trouvé
     </div>
     } } @else {
-    <div class="bg-gray-100 rounded-md p-2 mb-2 text-center text-gray-500">
+    <div class="bg-gray-200 rounded-md p-2 mb-2 text-center text-gray-500">
       Chargement en cours...
     </div>
     }
