--- a/src/app/features/tables/pages/table-list-page/table-list-page.component.scss
+++ b/src/app/features/tables/pages/table-list-page/table-list-page.component.scss
@@ -1,15 +1,26 @@
 .page-container {
   display: flex;
-  flex-direction: column;
   flex: 1;
+  flex-direction: column;
+  justify-items: center;
+  align-content: center;
+  max-width: 100%;
+  height: 100%;
+
 }
 
 .card-info {
   display: flex;
-  border: 1px solid #ff0000;
   flex: 1;
-  padding: 1em;
   justify-content: center;
-  align-content: center;
   flex-direction: column;
+  overflow: auto;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+  padding: 0;
+  margin: 0;
 }
